--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+}
+
+.vertical-margin {
+  margin-top: 16px;
+  margin-bottom: 16px;
+}
+
+.flex-spacer {
+  flex: 1 1 auto;
+}
