implement GA, and docker

--- a/src/app/pos/pos/pos.component.html
+++ b/src/app/pos/pos/pos.component.html
@@ -1,3 +1,5 @@
 <p>
-  pos works!
+  <button mat-icon-button (click)="checkout(currentTransaction)">
+    <mat-icon>check_circle</mat-icon>
+  </button>
 </p>
