--- a/src/app/pos/pos/pos.component.html
+++ b/src/app/pos/pos/pos.component.html
@@ -1,4 +1,7 @@
 <p>
+  <img src="https://user-images.githubusercontent.com/822159/36186684-9f05fef8-110e-11e8-991f-fae6ca60fe5d.png" />
+</p>
+<p>
   <button mat-icon-button (click)="checkout(currentTransaction)">
     <mat-icon>check_circle</mat-icon>
   </button>
