--- a/src/app/manager/user-table/user-table.component.html
+++ b/src/app/manager/user-table/user-table.component.html
@@ -37,9 +37,9 @@
       <mat-cell *matCellDef="let row"> {{row.status}} </mat-cell>
     </ng-container>
     <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef>Details</mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <a mat-button [routerLink]="['/manager/users', { outlets: { detail: ['user', {userId: row.id}] } }]" skipLocationChange>
+      <mat-header-cell *matHeaderCellDef fxLayoutAlign="end center">View Details</mat-header-cell>
+      <mat-cell *matCellDef="let row" fxLayoutAlign="end center" style="margin-right: 8px">
+        <a mat-button mat-icon-button [routerLink]="['/manager/users', { outlets: { detail: ['user', {userId: row.id}] } }]" skipLocationChange>
           <mat-icon>visibility</mat-icon>
         </a>
       </mat-cell>
