--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,11 @@ body {
   margin-top: 16px;
 }
 
+.horizontal-padding {
+  margin-left: 16px;
+  margin-right: 16px;
+}
+
 .flex-spacer {
   flex: 1 1 auto;
 }
