--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -1,56 +1,132 @@
-<mat-toolbar color="accent">
-  <h5>User Profile</h5>
-</mat-toolbar>
+<mat-toolbar color="accent"> <h5>User Profile</h5> </mat-toolbar>
 
 <mat-horizontal-stepper #stepper="matHorizontalStepper">
   <mat-step [stepControl]="userForm">
     <form [formGroup]="userForm">
       <ng-template matStepLabel>Account Information</ng-template>
       <div class="stepContent">
-        <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('name')" fxLayoutGap="10px">
+        <div
+          fxLayout="row"
+          fxLayout.lt-sm="column"
+          [formGroup]="userForm.get('name')"
+          fxLayoutGap="10px"
+        >
           <mat-form-field fxFlex="40%">
-            <input matInput placeholder="First Name" aria-label="First Name" formControlName="first">
-            <mat-error *ngIf="userForm.get('name').get('first').hasError('required')">
+            <input
+              matInput
+              placeholder="First Name"
+              aria-label="First Name"
+              formControlName="first"
+            />
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('first')
+                  .hasError('required')
+              "
+            >
               First Name is required
             </mat-error>
-            <mat-error *ngIf="userForm.get('name').get('first').hasError('minLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('first')
+                  .hasError('minLength')
+              "
+            >
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="userForm.get('name').get('first').hasError('maxLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('first')
+                  .hasError('maxLength')
+              "
+            >
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="20%">
-            <input matInput placeholder="MI" aria-label="Middle Initial" formControlName="middle">
+            <input
+              matInput
+              placeholder="MI"
+              aria-label="Middle Initial"
+              formControlName="middle"
+            />
             <mat-error *ngIf="userForm.get('name').get('middle').invalid">
               Only inital
             </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="40%">
-            <input matInput placeholder="Last Name" aria-label="Last Name" formControlName="last">
-            <mat-error *ngIf="userForm.get('name').get('last').hasError('required')">
+            <input
+              matInput
+              placeholder="Last Name"
+              aria-label="Last Name"
+              formControlName="last"
+            />
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('last')
+                  .hasError('required')
+              "
+            >
               Last Name is required
             </mat-error>
-            <mat-error *ngIf="userForm.get('name').get('last').hasError('minLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('last')
+                  .hasError('minLength')
+              "
+            >
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="userForm.get('name').get('last').hasError('maxLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('name')
+                  .get('last')
+                  .hasError('maxLength')
+              "
+            >
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
         <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px">
           <mat-form-field fxFlex="50%">
-            <input matInput placeholder="Date of Birth" aria-label="Date of Birth" formControlName="dateOfBirth" [matDatepicker]="dateOfBirthPicker">
-            <mat-hint *ngIf="userForm.get('dateOfBirth').touched">{{this.age}} year(s) old</mat-hint>
-            <mat-datepicker-toggle matSuffix [for]="dateOfBirthPicker"></mat-datepicker-toggle>
+            <input
+              matInput
+              placeholder="Date of Birth"
+              aria-label="Date of Birth"
+              formControlName="dateOfBirth"
+              [matDatepicker]="dateOfBirthPicker"
+            />
+            <mat-hint *ngIf="userForm.get('dateOfBirth').touched"
+              >{{ this.age }} year(s) old</mat-hint
+            >
+            <mat-datepicker-toggle
+              matSuffix
+              [for]="dateOfBirthPicker"
+            ></mat-datepicker-toggle>
             <mat-datepicker #dateOfBirthPicker></mat-datepicker>
             <mat-error *ngIf="userForm.get('dateOfBirth').invalid">
               Date must be with the last 100 years
             </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="50%">
-            <input matInput placeholder="E-mail" aria-label="E-mail" formControlName="email">
+            <input
+              matInput
+              placeholder="E-mail"
+              aria-label="E-mail"
+              formControlName="email"
+            />
             <mat-hint>Only your manager can update your e-mail.</mat-hint>
             <mat-error *ngIf="userForm.get('email').invalid">
               A valid E-mail is required
@@ -74,7 +150,11 @@
                 <span class="mat-body-1">Manager</span>
               </mat-radio-button>
             </mat-radio-group>
-            <mat-error *ngIf="userForm.get('role').hasError('required') && userForm.get('role').touched">
+            <mat-error
+              *ngIf="
+                userForm.get('role').hasError('required') && userForm.get('role').touched
+              "
+            >
               <span class="mat-caption">Role is required</span>
             </mat-error>
           </div>
@@ -82,7 +162,7 @@
       </div>
       <div fxLayout="row" class="margin-top">
         <div class="flex-spacer"></div>
-        <div *ngIf="userError" class="mat-caption error">{{userError}}</div>
+        <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
         <button mat-raised-button matStepperNext color="accent">Next</button>
       </div>
     </form>
@@ -91,58 +171,158 @@
     <form [formGroup]="userForm">
       <ng-template matStepLabel>Contact Information</ng-template>
       <div class="stepContent">
-        <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+        <div
+          fxLayout="row"
+          fxLayout.lt-sm="column"
+          [formGroup]="userForm.get('address')"
+          fxLayoutGap="10px"
+        >
           <mat-form-field fxFlex>
-            <input matInput placeholder="Address Line 1" aria-label="Address Line 1" formControlName="line1">
-            <mat-error *ngIf="userForm.get('address').get('line1').hasError('required')">
+            <input
+              matInput
+              placeholder="Address Line 1"
+              aria-label="Address Line 1"
+              formControlName="line1"
+            />
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('line1')
+                  .hasError('required')
+              "
+            >
               Line 1 is required
             </mat-error>
-            <mat-error *ngIf="userForm.get('address').get('line1').hasError('minLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('line1')
+                  .hasError('minLength')
+              "
+            >
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="userForm.get('address').get('line1').hasError('maxLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('line1')
+                  .hasError('maxLength')
+              "
+            >
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+        <div
+          fxLayout="row"
+          fxLayout.lt-sm="column"
+          [formGroup]="userForm.get('address')"
+          fxLayoutGap="10px"
+        >
           <mat-form-field fxFlex>
-            <input matInput placeholder="Address Line 2" aria-label="Address Line 2" formControlName="line2">
+            <input
+              matInput
+              placeholder="Address Line 2"
+              aria-label="Address Line 2"
+              formControlName="line2"
+            />
             <mat-hint>Optional</mat-hint>
-            <mat-error *ngIf="userForm.get('address').get('line2').hasError('minLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('line2')
+                  .hasError('minLength')
+              "
+            >
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="userForm.get('address').get('line2').hasError('maxLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('line2')
+                  .hasError('maxLength')
+              "
+            >
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
-        <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+        <div
+          fxLayout="row"
+          fxLayout.lt-sm="column"
+          [formGroup]="userForm.get('address')"
+          fxLayoutGap="10px"
+        >
           <mat-form-field fxFlex="40%">
-            <input matInput placeholder="City" aria-label="City" formControlName="city">
-            <mat-error *ngIf="userForm.get('address').get('city').hasError('required')">
+            <input matInput placeholder="City" aria-label="City" formControlName="city" />
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('city')
+                  .hasError('required')
+              "
+            >
               City is required
             </mat-error>
-            <mat-error *ngIf="userForm.get('address').get('city').hasError('minLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('city')
+                  .hasError('minLength')
+              "
+            >
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="userForm.get('address').get('city').hasError('maxLength')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('city')
+                  .hasError('maxLength')
+              "
+            >
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="30%">
-            <input type="text" placeholder="State" aria-label="State" matInput formControlName="state" [matAutocomplete]="stateAuto">
+            <input
+              type="text"
+              placeholder="State"
+              aria-label="State"
+              matInput
+              formControlName="state"
+              [matAutocomplete]="stateAuto"
+            />
             <mat-autocomplete #stateAuto="matAutocomplete">
-              <mat-option *ngFor="let state of states | async" [value]="state.name">
+              <mat-option *ngFor="let state of (states | async)" [value]="state.name">
                 {{ state.name }}
               </mat-option>
             </mat-autocomplete>
-            <mat-error *ngIf="userForm.get('address').get('state').hasError('required')">
+            <mat-error
+              *ngIf="
+                userForm
+                  .get('address')
+                  .get('state')
+                  .hasError('required')
+              "
+            >
               State is required
             </mat-error>
           </mat-form-field>
           <mat-form-field fxFlex="30%">
-            <input matInput placeholder="Zip Code" aria-label="Zip Code" formControlName="zip">
+            <input
+              matInput
+              placeholder="Zip Code"
+              aria-label="Zip Code"
+              formControlName="zip"
+            />
             <mat-error *ngIf="userForm.get('address').get('zip').invalid">
               A valid Zip Code is required
             </mat-error>
@@ -152,8 +332,12 @@
           <mat-list formArrayName="phones">
             <h2 mat-subheader>Phone Number(s)</h2>
             <button mat-button (click)="this.addPhone()">
-              <mat-icon>add</mat-icon>Add Phone</button>
-            <mat-list-item *ngFor="let position of this.phonesArray.controls let i=index" [formGroupName]="i">
+              <mat-icon>add</mat-icon>Add Phone
+            </button>
+            <mat-list-item
+              *ngFor="let position of this.phonesArray.controls; let i = index"
+              [formGroupName]="i"
+            >
               <mat-form-field fxFlex="100px">
                 <mat-select placeholder="Type" formControlName="type">
                   <mat-option *ngFor="let type of this.PhoneTypes" [value]="type">
@@ -162,12 +346,21 @@
                 </mat-select>
               </mat-form-field>
               <mat-form-field fxFlex fxFlexOffset="10px">
-                <input matInput type="text" placeholder="Number" formControlName="number">
+                <input
+                  matInput
+                  type="text"
+                  placeholder="Number"
+                  formControlName="number"
+                />
                 <mat-error *ngIf="this.phonesArray.controls[i].invalid">
                   A valid phone number is required
                 </mat-error>
               </mat-form-field>
-              <button fxFlex="33px" mat-icon-button (click)="this.phonesArray.removeAt(i)">
+              <button
+                fxFlex="33px"
+                mat-icon-button
+                (click)="this.phonesArray.removeAt(i)"
+              >
                 <mat-icon>close</mat-icon>
               </button>
             </mat-list-item>
@@ -177,7 +370,7 @@
       <div fxLayout="row" class="margin-top">
         <button mat-button matStepperPrevious color="accent">Back</button>
         <div class="flex-spacer"></div>
-        <div *ngIf="userError" class="mat-caption error">{{userError}}</div>
+        <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
         <button mat-raised-button matStepperNext color="accent">Next</button>
       </div>
     </form>
@@ -192,9 +385,17 @@
       <div fxLayout="row" class="margin-top">
         <button mat-button matStepperPrevious color="accent">Back</button>
         <div class="flex-spacer"></div>
-        <div *ngIf="userError" class="mat-caption error">{{userError}}</div>
+        <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
         <button mat-button color="warn" (click)="stepper.reset()">Reset</button>
-        <button mat-raised-button matStepperNext color="primary" type="submit" [disabled]="this.userForm.invalid">Update</button>
+        <button
+          mat-raised-button
+          matStepperNext
+          color="primary"
+          type="submit"
+          [disabled]="this.userForm.invalid"
+        >
+          Update
+        </button>
       </div>
     </form>
   </mat-step>
